# GADMA

./: .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.md  Realizame  un afiche que difunda el valor cultural de machu picchu  example_params  install  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: blank.yml  ci.yml  lint.yml  publication_to_pypi.yml  tests.yml
ML_models/: ML_models_and_train_pipeline.ipynb
ML_models/saved_ml_models/: model_cnn_weights.h5
doc/: dem_model_col.eps  exponential.eps  input_formats.md  linear.eps  manual.tex  refs.bib  sudden.eps
docs/: Makefile  requirements.txt
docs/source/: api.rst  changelogs.rst  citations.rst  conf.py  contents.rst  data.rst  development_workflow.rst  engine.rst  faq.rst  getting_help.rst  index.rst  model.rst  optimizer.rst  user_manual.rst  variable.rst
examples/YRI_CEU/: README.md
examples/api_examples/: optimization_example.ipynb  variables_example.ipynb
examples/changing_theta/: README.md  changing_theta.ipynb  params
fs_examples/: YRI_CEU.fs  test.fs
gadma/: .demographic_model.py.swm  .options.py.swm  .support.py.swm  Inference.py  __init__.py  core.py  demographic_model.py  dical2_path.py  extra_params_template  fast_data_read.py  genetic_algorithm.py  get_confidence_intervals.py  get_confidence_intervals_for_LD.py  get_confidence_intervals_for_ld.py  options.py  params_template  parsing_ld_data.py  precompute_ld_data.py  run_ls_on_boot_data.py  support.py  target.py  transform.py  variable.py  version.py
hyperparameter_optimization/: README.md  run_smac.py
requirements/: bayes_opt.txt  bayes_opt_addit.txt  conda.txt  engines.txt  minimal.txt  tests.txt
tests/: __init__.py  test_all.py  test_ci.py  test_cli.py  test_coalescent_dem_model.py  test_data.py  test_dem_model_structure.py  test_engines.py  test_fast_data_read.py  test_ga.py  test_ld_tempo.py  test_models.py  test_moments_ld_engine.py  test_momi_engine.py  test_optimizers.py  test_tree_dem_model.py  test_utils.py  test_variable_pool.py  test_variables.py  test_z_dical2.py  tmp.py
(+1202 files in other folders)
