[metadata]
name = gadma
author = Ekaterina Noskova
license = GNU GPLv3+
description = A tool for easy-to-use demographic inference
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ctlab/GADMA
author_email = ekaterina.e.noskova@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords = demographic history, demographic inference, evolution, population genetics
project_urls =
    Documentation = https://gadma.readthedocs.io/en/stable/
    Source Code = https://github.com/ctlab/GADMA
    Bug Tracker = https://github.com/ctlab/GADMA/issues

[options]
packages = gadma
zip_safe = False
include_package_data = True
python_requires = >=3.6
install_requires =
    scipy
    numpy
    matplotlib
    Pillow >= 4.2.1
    ruamel.yaml == 0.16.12
    demes
    demesdraw
    dadi
    h5py == 3.10.0
    scikit-allel
    moments-popgen <= 1.3.1
    pandas <= 2.2.2
setup_requires =
    setuptools
    setuptools_scm

[options.entry_points]
console_scripts =
    gadma = gadma.core:main
    gadma-run_ls_on_boot_data = gadma.run_ls_on_boot_data:main
    gadma-get_confidence_intervals = gadma.get_confidence_intervals:main
    gadma-get_confidence_intervals_for_ld = gadma.get_confidence_intervals_for_ld:main
    gadma-precompute_ld_data = gadma.precompute_ld_data:main

[flake8]
max-line-length = 89
extend-ignore = E203, W503

[tool:pytest]
addopts = --disable-warnings
testpaths = tests
